--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,39 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["eslint:recommended", "prettier"],
+    "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+    "plugins": ["prettier", "import", "@typescript-eslint"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "error"
+        "prettier/prettier": "error",
+        "no-console": "error",
+
+        "no-unused-vars": "error",
+        "import/order": [
+            "error",
+            {
+                "groups": [
+                    ["external", "builtin"],
+                    ["parent", "internal"],
+                    ["index", "sibling"]
+                ],
+                "newlines-between": "always"
+            }
+        ],
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^_",
+                "varsIgnorePattern": "^_",
+                "caughtErrorsIgnorePattern": "^_"
+            }
+        ],
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off"
     }
 }
