--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-    "lint:fix": "eslint --fix --ext .js,.ts"
+    "lint": "eslint ./ --ext .js,.ts",
+    "lint:fix": "eslint ./ --fix --ext .js,.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -36,13 +37,13 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^20.7.0",
     "@types/pino": "^7.0.5",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "*"
