--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "prettier/prettier": "error",
         "no-console": "error",
 
-        "no-unused-vars": "error",
+        "no-unused-vars": "warn",
         "import/order": [
             "error",
             {
